@@ -14,6 +14,69 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <profiles>
+        <profile>
+            <id>Regression</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>3.2.5</version> <!-- Latest stable version -->
+                        <configuration>
+                            <!-- Link your testng.xml -->
+                            <suiteXmlFiles>
+                                <suiteXmlFile>testng.xml</suiteXmlFile>
+                            </suiteXmlFiles>
+
+                            <!-- Optional: pass parameters -->
+                            <systemPropertyVariables>
+                                <browser>chrome</browser>
+                                <env>qa</env>
+                            </systemPropertyVariables>
+
+                            <!-- Optional: parallel run config if not set in XML -->
+                            <!--
+                            <parallel>classes</parallel>
+                            <threadCount>3</threadCount>
+                            -->
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>Smoke</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>3.2.5</version> <!-- Latest stable version -->
+                        <configuration>
+                            <!-- Link your testng.xml -->
+                            <suiteXmlFiles>
+                              <suiteXmlFile>Smoketestng.xml</suiteXmlFile>
+                            </suiteXmlFiles>
+
+                            <!-- Optional: pass parameters -->
+                            <systemPropertyVariables>
+                                <browser>chrome</browser>
+                                <env>qa</env>
+                            </systemPropertyVariables>
+
+                            <!-- Optional: parallel run config if not set in XML -->
+                            <!--
+                            <parallel>classes</parallel>
+                            <threadCount>3</threadCount>
+                            -->
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+
     <build>
         <plugins>
             <plugin>
@@ -39,7 +102,7 @@
                     <threadCount>3</threadCount>
                     -->
                 </configuration>
-            </plugin>
+            </plugin><plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-compiler-plugin</artifactId><configuration><source>8</source><target>8</target><compilerArgs>--enable-preview</compilerArgs></configuration></plugin>
         </plugins>
     </build>
 
@@ -83,6 +146,17 @@
             <scope>compile</scope>
         </dependency>
 
-
+        <!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>5.5.6</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.20.1</version>
+        </dependency>
     </dependencies>
 </project>
